k8s/nginx/nginx-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - 'nginx.clrslate.local'
  gateways:
  - devops-tools/env-gateway
  http:
  - route:
    - destination:
        host: nginx
        port:
          number: 80
